--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "releasehosting",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/static/js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
@@ -15,9 +15,20 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^2.8.0",
     "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "webpack-dev-server": "^4.15.1"
   }
 }
